--- a/config/database.yml
+++ b/config/database.yml
@@ -83,3 +83,7 @@ production:
   database: proyecto_production
   username: proyecto
   password: <%= ENV['PROYECTO_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  url: <%= ENV['DATABASE_URL'] %>
