--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "proyecto",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "popper": "^1.0.1"
+  }
 }
