instalacion yarn popperjs

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "proyecto",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "5.1.3",
     "jquery": "^3.6.0",
     "popper": "^1.0.1"
   }
