--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "5.1.3",
     "jquery": "^3.6.0",
+    "node-gyp": "9.0.0",
     "popper": "^1.0.1"
   }
 }
